# chartRecorderJT

./: .gitignore  CMakeLists.txt  README.md  dashboard.html  lv_conf.h
scripts/: recorder.service  setup-kiosk.sh
src/: alarm.c  alarm.h  comm.h  comm_modbus.c  comm_sim.c  config.c  config.h  crypto.c  crypto.h  data_model.c  data_model.h  diag.c  diag.h  events.c  events.h  export.c  export.h  history.c  history.h  logger.c  logger.h  main.c  modbus_tcp.c  modbus_tcp.h  pdf.c  pdf.h  update.c  update.h  users.c  users.h  version.h  webserver.c  webserver.h
src/ui/: font_units_12.c  font_units_14.c  font_units_16.c  font_units_28.c  img_jetpace.c  scr_alarm.c  scr_bar.c  scr_digital.c  scr_menu.c  scr_polar.c  scr_trend.c  ui.c  ui.h
tools/: mb_probe.c
